# api

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci-pr.yml  ci.yml
app/: __init__.py
app/core/config/: settings.py
app/core/logging/: __init__.py  config.py  handlers.py  logger.py
app/domain/case/: entities.py  use_cases.py
app/infrastructure/repositories/database/: __init__.py  template.py
app/routes/xpto/: __init__.py  contracts.py
k8s/: Chart.yaml  values.yaml
k8s/templates/: _helpers.tpl  deployment.yaml  service.yaml
tests/unit/: test_settings.py
