[project]
name = "api"
version = "0.1.0"
description = "Template to api with FastAPI"
authors = [
    {name = "Natan Nascimento", email = "contato@natanascimento.com"},
]
dependencies = [
    "fastapi>=0.111.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "Apache 2.0"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pdm.scripts]
start = {call = "app:start"}